objects/TW1_Pendencia__c.object
<CustomObject>
    <fields>
        <fullName>TW1_Caso_Relacionado__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Caso Relacionado</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Pendências</relationshipLabel>
        <relationshipName>TW1_Pendencias</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Exigencia__c</fullName>
        <label>Data Exigência</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Data_Regularizacao__c</fullName>
        <label>Data Regularização</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TW1_Status__c</fullName>
        <defaultValue>&quot;Pendente&quot;</defaultValue>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pendente</fullName>
                </value>
                <value>
                    <fullName>Resolvida</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TW1_Tipo_Exigencia__c</fullName>
        <label>Comentários</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tw1_Documento__c</fullName>
        <label>Documento</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cat</fullName>
                </value>
                <value>
                    <fullName>CCI</fullName>
                </value>
                <value>
                    <fullName>Cert. Casamento</fullName>
                </value>
                <value>
                    <fullName>Cert. Nascimento</fullName>
                </value>
                <value>
                    <fullName>Certidão de 9º distribuidor</fullName>
                </value>
                <value>
                    <fullName>Certidão de primeira aquisição</fullName>
                </value>
                <value>
                    <fullName>Certidão do registro auxiliar</fullName>
                </value>
                <value>
                    <fullName>Certidão de Ônus Reais</fullName>
                </value>
                <value>
                    <fullName>Contrato Original</fullName>
                </value>
                <value>
                    <fullName>Declaração</fullName>
                </value>
                <value>
                    <fullName>Declaração 1ª aquisição outro município</fullName>
                </value>
                <value>
                    <fullName>Declaração de apontamentos</fullName>
                </value>
                <value>
                    <fullName>Declaração de primeira aquisição</fullName>
                </value>
                <value>
                    <fullName>Depende de outro registro</fullName>
                </value>
                <value>
                    <fullName>Documento dos compradores</fullName>
                </value>
                <value>
                    <fullName>Em tempo</fullName>
                </value>
                <value>
                    <fullName>Enfitêutica</fullName>
                </value>
                <value>
                    <fullName>Escritura Cessão</fullName>
                </value>
                <value>
                    <fullName>Escritura PCV</fullName>
                </value>
                <value>
                    <fullName>Espelho de IPTU</fullName>
                </value>
                <value>
                    <fullName>Guia de Comunicação</fullName>
                </value>
                <value>
                    <fullName>ITBI Cessão</fullName>
                </value>
                <value>
                    <fullName>Pacto Antinupcial</fullName>
                </value>
                <value>
                    <fullName>Procuração</fullName>
                </value>
                <value>
                    <fullName>Quitação Condominial</fullName>
                </value>
                <value>
                    <fullName>Reconecimento de Firma</fullName>
                    <label>Reconhecimento de Firma</label>
                </value>
                <value>
                    <fullName>RG e CPF</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Pendência</label>
    <nameField>
        <displayFormat>PEND#{YYYY}{MM}{0000}</displayFormat>
        <label>Nome da Pendência</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pendências</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>